tests/e2e/sidecar-injector/injected/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: injected
spec:
  namespaceTemplate:
    metadata:
      labels:
        kyverno-injection: enabled
  steps: 
  - try:
    - create:
        file: ./pod.yaml
    - assert:
        file: ./pod-assert.yaml
